fix linter errors

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -50,3 +50,9 @@ Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues:
   Enabled: false
+
+Layout/EndOfLine:
+  Enabled: false
+
+Layout/EndOfLine:
+  Enabled: false
